--- a/TradingDashboard.html
+++ b/TradingDashboard.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,93 +10,97 @@
        CSS
   ====================== -->
   <style>
-    :root {
-      --primary: #4f46e5;
-      --bg: #f9fafb;
-      --text: #111827;
-    }
-
     * {
       box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: system-ui, sans-serif;
     }
 
     body {
-      margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
+      background: #192129;
+      padding: 1.5rem;
     }
 
+    .header {
+      padding: 1.5rem;
+      margin-bottom: 1.5rem;
+      text-align: center;
+      background: #11171C;
+      border-radius: 12px;
+      color: white;
+    }
+
+    /* Grid */
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-auto-rows: 422px;
+      gap: 1.5rem;
+    }
+
+    /* Cards */
     .card {
       background: white;
-      padding: 2rem;
       border-radius: 12px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
-      max-width: 400px;
-      width: 100%;
+      padding: 1.5rem;
       text-align: center;
+      font-weight: 600;
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.08);
     }
 
-    h1 {
-      margin-top: 0;
-      color: var(--primary);
+    /* Spans */
+    .large {
+      grid-column: span 2;
+      grid-row: span 1;
     }
 
-    button {
-      margin-top: 1rem;
-      padding: 0.6rem 1.2rem;
-      border: none;
-      border-radius: 8px;
-      background: var(--primary);
-      color: white;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: transform 0.1s ease, opacity 0.1s ease;
+    .small {
+      grid-column: span 1;
+      grid-row: span 1;
     }
 
-    button:hover {
-      opacity: 0.9;
-    }
+    /* Mobile */
+    @media (max-width: 1200px) {
+      .grid {
+        grid-template-columns: 1fr;
+      }
 
-    button:active {
-      transform: scale(0.97);
-    }
-
-    .output {
-      margin-top: 1rem;
-      font-weight: 500;
+      .large,
+      .small {
+        grid-column: span 1;
+      }
     }
   </style>
 </head>
+
 <body>
+  <header class="header">
+    <h1>Responsive Grid Dashboard</h1>
+  </header>
+  <main class="grid">
+    <div class="card small">A</div>
+    <div class="card large">B</div>
+    <div class="card small">C</div>
+    <div class="card large">D</div>
+    <div class="card large">E</div>
 
-  <!-- =====================
-       HTML
-  ====================== -->
-  <div class="card">
-    <h1>Hello 👋</h1>
-    <p>This is a single-file HTML, CSS & JS template.</p>
-    <button id="actionBtn">Click me</button>
-    <div class="output" id="output"></div>
-  </div>
+  </main>
+</body>
 
-  <!-- =====================
+</html>
+
+<!-- =====================
        JavaScript
   ====================== -->
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const button = document.getElementById("actionBtn");
-      const output = document.getElementById("output");
-
-      button.addEventListener("click", () => {
-        output.textContent = "Button clicked at " + new Date().toLocaleTimeString();
-      });
+<script>
+  document.querySelectorAll(".card").forEach((card, index) => {
+    card.addEventListener("click", () => {
+      alert(`You clicked Card ${index + 1}`);
     });
-  </script>
+  });
+</script>
 
 </body>
+
 </html>
